--- a/index.html
+++ b/index.html
@@ -293,11 +293,10 @@
             <h1 class="text-2xl md:text-3xl font-bold font-playfair">Charlesabi Enterprises</h1>
             <nav class="hidden md:flex space-x-8 text-base font-medium">
                 <a href="index.html" class="block px-4 py-2 bg-accent text-primary rounded-md">Home</a> <!-- Active link for this page -->
-                <a href="about.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">About</a>
+                <a href="about.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">About Us</a>
                 <a href="services.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">Services</a>
-                <a href="products.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">Price List</a>
-                <a href="contact.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">Contact</a>
-                <a href="contact.html" class="block px-4 py-2 hover:bg-white hover:text-accent transition duration-300 rounded-full border border-white">Get Quote</a>
+                <a href="products.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">Products</a>
+                <a href="contact.html" class="block px-4 py-2 hover:bg-accent hover:text-primary transition duration-300 rounded-md">Contact us</a>
             </nav>
             <!-- Mobile Menu Button - Hamburger icon for small screens -->
             <button id="mobile-menu-button" class="md:hidden text-white text-3xl focus:outline-none">
@@ -307,11 +306,9 @@
         <!-- Mobile Menu - Hidden by default, toggles on click -->
         <div id="mobile-menu" class="hidden md:hidden bg-primary text-white py-2">
             <a href="index.html" class="block active-link">Home</a> <!-- Active link for this page -->
-            <a href="about.html" class="block hover:bg-accent hover:text-primary transition duration-300">About</a>
+            <a href="about.html" class="block hover:bg-accent hover:text-primary transition duration-300">About Us</a>
             <a href="services.html" class="block hover:bg-accent hover:text-primary transition duration-300">Services</a>
-            <a href="products.html" class="block hover:bg-accent hover:text-primary transition duration-300">Price List</a>
-            <a href="contact.html" class="block hover:bg-accent hover:text-primary transition duration-300">Contact</a>
-            <a href="contact.html" class="block get-quote-mobile hover:text-white transition duration-300">Get Quote</a>
+            <a href="products.html" class="block hover:bg-accent hover:text-primary transition duration-300">Products</a>
         </div>
     </header>
 
@@ -576,11 +573,11 @@
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="phone" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="tel:+2547XXXXXXXX" class="hover:text-accent transition duration-300">+254 7XX XXX XXXX</a>
+                        <a href="tel:+254711408733" class="hover:text-accent transition duration-300">+254 711408733</a>
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="mail" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="mailto:info@charlesabienterprises.com" class="hover:text-accent transition duration-300">info@charlesabienterprises.com</a>
+                        <a href="charlessaabi@gmail.com" class="hover:text-accent transition duration-300">charlessaabi@gmail.com</a>
                     </li>
                 </ul>
             </div>
