--- a/index.html
+++ b/index.html
@@ -548,11 +548,11 @@
             <div>
                 <h4 class="text-xl font-playfair font-bold mb-4">Quick Links</h4>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="index.php" class="hover:text-accent transition duration-300">Home</a></li>
-                    <li><a href="about.php" class="hover:text-accent transition duration-300">About Us</a></li>
-                    <li><a href="services.php" class="hover:text-accent transition duration-300">Services</a></li>
-                    <li><a href="products.php" class="hover:text-accent transition duration-300">Price List</a></li>
-                    <li><a href="contact.php" class="hover:text-accent transition duration-300">Contact</a></li>
+                  
+                    <li><a href="about.html" class="hover:text-accent transition duration-300">About Us</a></li>
+                    <li><a href="services.html" class="hover:text-accent transition duration-300">Services</a></li>
+                    <li><a href="products.html" class="hover:text-accent transition duration-300">Products</a></li>
+                    <li><a href="contact.html" class="hover:text-accent transition duration-300">Contact Us</a></li>
                 </ul>
             </div>
 
