--- a/contact.html
+++ b/contact.html
@@ -316,7 +316,7 @@
                         <li class="flex items-center justify-center md:justify-start">
                             <i data-lucide="mail" class="w-7 h-7 mr-3 text-accent"></i>
                             <strong class="text-primary">Email:</strong>
-                            <a href="mailto:charlesochieng083@gmail.com" class="text-textDark hover:text-accent transition duration-300 ml-1">charlesochieng083@gmail.com</a>
+                            <a href="mailto:charlessaabi@gmail.com" class="text-textDark hover:text-accent transition duration-300 ml-1">charlessaa@gmail.com</a>
                         </li>
                         <li class="flex items-center justify-center md:justify-start">
                             <i data-lucide="clock" class="w-7 h-7 mr-3 text-accent"></i>
@@ -411,11 +411,10 @@
             <div>
                 <h4 class="text-xl font-playfair font-bold mb-4">Quick Links</h4>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="index.php" class="hover:text-accent transition duration-300">Home</a></li>
-                    <li><a href="about.php" class="hover:text-accent transition duration-300">About Us</a></li>
-                    <li><a href="services.php" class="hover:text-accent transition duration-300">Services</a></li>
-                    <li><a href="products.php" class="hover:text-accent transition duration-300">Price List</a></li>
-                    <li><a href="contact.php" class="hover:text-accent transition duration-300">Contact</a></li>
+                    <li><a href="index.html" class="hover:text-accent transition duration-300">Home</a></li>
+                    <li><a href="about.html" class="hover:text-accent transition duration-300">About Us</a></li>
+                    <li><a href="services.html" class="hover:text-accent transition duration-300">Services</a></li>
+                    <li><a href="products.html" class="hover:text-accent transition duration-300">Products</a></li>
                 </ul>
             </div>
 
@@ -436,11 +435,11 @@
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="phone" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="tel:+2547XXXXXXXX" class="hover:text-accent transition duration-300">+254 7XX XXX XXXX</a>
+                        <a href="tel:+254711408733" class="hover:text-accent transition duration-300">+254 711408733</a>
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="mail" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="mailto:info@charlesabienterprises.com" class="hover:text-accent transition duration-300">info@charlesabienterprises.com</a>
+                        <a href="mailto:charlessaabi@gmail.com" class="hover:text-accent transition duration-300">charlessaabi@gmail.com</a>
                     </li>
                 </ul>
             </div>
