--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
         .about-hero-section {
             min-height: 50vh; /* Shorter hero for sub-pages */
             padding-top: 80px; /* Accounts for fixed header height */
-            background-image: url('IMAGES/Two.jfif'); /* Specific image for About page */
+           background-image: url('IMAGES/Kenya.jfif'); /* Consistent hero image */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
