--- a/products.html
+++ b/products.html
@@ -42,6 +42,7 @@
             /* Removed background-image from body to use only hero image for sections */
             background-repeat: repeat; /* Kept for consistency if a pattern is desired elsewhere */
             background-attachment: fixed; /* Creates a subtle parallax effect for the pattern */
+              background-image: url('IMAGES/Kenya.jfif'); /* Consistent hero image */
         }
         body.loaded {
             opacity: 1; /* Final state after page content is loaded */
